# ChangeLog for dev-ruby/rspec
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.9 2007/08/20 19:50:06 jokey Exp $

  20 Aug 2007; Markus Ullmann <jokey@gentoo.org> rspec-1.0.5.ebuild:
  Stable on x86 wrt bug #187617

*rspec-1.0.8 (15 Aug 2007)

  15 Aug 2007; Hans de Graaff <graaff@gentoo.org> +rspec-1.0.8.ebuild:
  Version bump: large number of enhancements, changes, and bug fixes.

  11 Aug 2007; Steve Dibb <beandog@gentoo.org> rspec-1.0.5.ebuild:
  amd64 stable, bug 187617

  05 Aug 2007; nixnut <nixnut@gentoo.org> rspec-1.0.5.ebuild:
  Stable on ppc wrt bug 187617

*rspec-1.0.5 (19 Jun 2007)

  19 Jun 2007; Richard Brown <rbrown@gentoo.org> -rspec-0.7.5.ebuild,
  +rspec-1.0.5.ebuild:
  Version bump.

*rspec-1.0.4 (05 Jun 2007)

  05 Jun 2007; Joshua Nichols <nichoj@gentoo.org> +rspec-1.0.4.ebuild:
  Version bump. See bug #180046.

  13 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> rspec-0.7.5.ebuild:
  Add ~ppc and ~amd64 so I use this at work.

  10 Feb 2007; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  rspec-0.7.5.ebuild:
  Updated license to MIT

*rspec-0.7.5 (23 Dec 2006)

  23 Dec 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org> +metadata.xml,
  +rspec-0.7.5.ebuild:
  new ebuild from Aggelos Orfanakos <agorf@void.gr> and Nikolai Weibull
  <now@bitwi.se>, #140155
