@@ -1,3 +1,0 @@
-MD5 23855d63c2544c2e8807200bf1322cf1 rspec-1.0.4.gem 115714
-RMD160 39ee47f89cb22343335409fdc3af1cffc4e6ecc3 rspec-1.0.4.gem 115714
-SHA256 f3f2da963694763cc923232ed80c6067ecd0f1bc5df349d96859ded779f434fa rspec-1.0.4.gem 115714
