@@ -1,18 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/Attic/rspec-1.0.4.ebuild,v 1.1 2007/06/05 02:37:56 nichoj Exp $
-
-inherit ruby gems
-
-USE_RUBY="ruby18"
-
-DESCRIPTION="A Behaviour Driven Development (BDD) framework for Ruby"
-HOMEPAGE="http://rspec.rubyforge.org/"
-SRC_URI="http://gems.rubyforge.org/gems/${P}.gem"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
-IUSE=""
-
-DEPEND=">=dev-lang/ruby-1.8.4"
