@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rspec
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.9 2007/08/20 19:50:06 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.10 2007/09/22 08:07:49 graaff Exp $
+
+  22 Sep 2007; Hans de Graaff <graaff@gentoo.org> -rspec-1.0.4.ebuild:
+  Remove old unstable-only version
 
   20 Aug 2007; Markus Ullmann <jokey@gentoo.org> rspec-1.0.5.ebuild:
   Stable on x86 wrt bug #187617
